# ImageAnalysis1

./: CMakeLists.txt  Exercise11.cpp  Exercise5.cpp  Exercise8.cpp  main.cpp
IALib/: CMakeLists.txt  Gaussian.cpp  Gaussian.h  IALib.cpp  IALib.h
bpnn/: .gitignore  CMakeLists.txt  backprop.cpp  ns_test.cpp
torch/: Neural_Network.py  main.py
